# Ames-Housing-Data-Exploration-and-Predictive-Modeling

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  housing.py  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
docker/: Dockerfile  docker-compose.yml
src/ames_housing/: __init__.py  config.py
src/ames_housing/api/: __init__.py  main.py  routes.py  schemas.py
src/ames_housing/data/: __init__.py  loader.py  preprocessor.py  schema.py
src/ames_housing/features/: __init__.py  engineering.py  transformers.py
src/ames_housing/utils/: helpers.py  logging.py
tests/: conftest.py  test_api.py  test_data.py  test_features.py  test_models.py
