[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ames-housing"
version = "0.1.0"
description = "Production-grade house price prediction system trained on the Ames Housing dataset"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pooja Mohan" }]

dependencies = [
    # Core data science
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "xgboost>=2.0",

    # Feature engineering & validation
    "pandera>=0.18",
    "shap>=0.44",

    # Hyperparameter tuning
    "optuna>=3.5",
    "optuna-integration[lightgbm]>=3.5",

    # Experiment tracking
    "mlflow>=2.10",

    # Config & validation
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",

    # Logging
    "loguru>=0.7",

    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",  # for async test client

    # Visualisation
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "notebook>=7.1",
]

[project.scripts]
ames-train = "ames_housing.models.trainer:main"
ames-serve = "ames_housing.api.main:start"

[tool.hatch.build.targets.wheel]
packages = ["src/ames_housing"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501", "B008", "B905"]

[tool.ruff.lint.isort]
known-first-party = ["ames_housing"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src/ames_housing --cov-report=term-missing"

[tool.coverage.run]
source = ["src/ames_housing"]
omit = ["tests/*"]
